# python-test

./: README.md  pyproject.toml
.github/workflows/: bumpkin.yml
src/python_test/: __init__.py  api.py  catalog.py  farewell.py  formal.py
