[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-test"
version = "0.1.0"
description = "Smoke repo for testing Bumpkin Python release planning"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Bumpkin" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
